--- a/MobileShop.WinUI/frmIndexProdavac.resx
+++ b/MobileShop.WinUI/frmIndexProdavac.resx
@@ -1933,4 +1933,7 @@
         AKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigD/9k=
 </value>
   </data>
+  <metadata name="options.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
